Update the index method to return all the restaurants
- Update layout to iterate through the list of available restaurants (if available)

--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,3 +1,7 @@
-No restaurants available
+- if @restaurants.any?
+  - @restaurants.each do |restaurant|
+    %h2= restaurant.name
+- else
+  No restaurants available
 
 %a(href='#') Add a restaurant
