--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,8 +1,12 @@
 - if @restaurants.any?
   - @restaurants.each do |restaurant|
     = link_to restaurant.name, restaurant_path(restaurant)
+    - if restaurant.reviews.any?
+      - restaurant.reviews.each do |review|
+        %p #{review.thoughts} #{review.rating}/5
     = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
+    = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
 - else
   No restaurants available
 
