--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -6,7 +6,8 @@
         %p #{review.thoughts} #{review.rating}/5
     = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
-    = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
+    - if current_user
+      = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
 - else
   No restaurants available
 
