--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -7,7 +7,9 @@
     = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
     - if current_user
-      = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
+      - if !current_user.has_reviewed?(restaurant)
+        = link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant)
+
 - else
   No restaurants available
 
