--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -4,6 +4,7 @@
     - if restaurant.reviews.any?
       - restaurant.reviews.each do |review|
         %p #{review.thoughts} #{review.rating}/5
+      %h3 Average Rating: #{restaurant.average_rating.to_i}
     = link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant)
     = link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete
     - if current_user
