--- a/app/views/restaurants/new.html.haml
+++ b/app/views/restaurants/new.html.haml
@@ -9,5 +9,7 @@
 = form_for @restaurant do |f|
   = f.label :name
   = f.text_field :name
+  = f.label :description
+  = f.text_area :description
   = f.submit 'Create restaurant'
   
